# altr

./: .gitignore  README.md  pyproject.toml  ruff.toml
docs/: nlp-pipeline-example.ipynb  nlp.ipynb  over-engineered-nlp-pipeline.ipynb  pantip.ipynb  pantip_scraper.ipynb  visualisation.ipynb
src/altr/: __init__.py  greet.py  vis.py
src/altr/monad/: extended_pymonad.py  maybe_monad.py
src/altr/nlp/: __init__.py  _types.py  _utils.py  ngram.py  tokenise.py
src/altr/scraper/: __init__.py
src/altr/scraper/pantip/: README.md  __init__.py  client.py  comment.py  config.py  scraper.py  search.py  text_cleaner.py  topic.py  utils.py
src/altr/visualisation/: __init__.py  palette_manager.py  style_manager.py
src/altr/visualization/: __init__.py
tests/: test_altr.py
tests/nlp/: test_nlp.py  test_tokenise.py
tests/visualisation/: test_set_styles.py
