[project]
name = "altr"
version = "0.1.0"
description = "The code snippet for ALTR(my alias)"
classifiers = ["Private :: Do Not Upload"]
readme = "README.md"
authors = [
    { name = "ALTR", email = "chuan.khuna@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.4.1",
]
