[project]
name = "altr"
version = "0.1.0"
description = "The code snippet for ALTR(my alias)"
classifiers = ["Private :: Do Not Upload"]
readme = "README.md"
authors = [
    { name = "ALTR", email = "chuan.khuna@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3.3",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pythainlp>=5.1.1",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.4.1",
    "pytest>=8.3.5",
]
